Added three Forms into Product Warehouse Manager

--- a/trunk/ProductWarehouseManager/ProductWarehouseManager/ProductWarehouseManager.csproj
+++ b/trunk/ProductWarehouseManager/ProductWarehouseManager/ProductWarehouseManager.csproj
@@ -51,8 +51,17 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Product WareHouse MS, Log In.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Product WareHouse MS, Log In.Designer.cs">
+      <DependentUpon>Product WareHouse MS, Log In.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Product WareHouse MS, Log In.resx">
+      <DependentUpon>Product WareHouse MS, Log In.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
