--- a/trunk/ProductWarehouseManager/ComponentsIntergrationMiddleware/ComponentsIntergrationMiddleware.csproj
+++ b/trunk/ProductWarehouseManager/ComponentsIntergrationMiddleware/ComponentsIntergrationMiddleware.csproj
@@ -40,8 +40,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="api\master\dal\GenericDAL.cs" />
+    <Compile Include="api\master\helper\SqlHelper.cs" />
+    <Compile Include="api\master\model\Permissions.cs" />
+    <Compile Include="api\master\model\Role.cs" />
+    <Compile Include="api\master\model\SignIn.cs" />
+    <Compile Include="api\master\model\User.cs" />
     <Compile Include="ComponentIntegrationFacade.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="api\transaction\Transaction.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
