Added logic to the sign in page an dsign up page

--- a/trunk/ProductWarehouseManager/ProductWarehouseManager/ProductWarehouseManager.csproj
+++ b/trunk/ProductWarehouseManager/ProductWarehouseManager/ProductWarehouseManager.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LogInSignUp\LogInClass.cs" />
+    <Compile Include="LogInSignUp\SignUpClass.cs" />
     <Compile Include="PermissionManager.cs">
       <SubType>Form</SubType>
     </Compile>
