--- a/trunk/ProductWarehouseManager/ComponentsIntergrationMiddleware/ComponentsIntergrationMiddleware.csproj
+++ b/trunk/ProductWarehouseManager/ComponentsIntergrationMiddleware/ComponentsIntergrationMiddleware.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="api\bulk\Record.cs" />
     <Compile Include="api\master\dal\CompanyDAL.cs" />
     <Compile Include="api\master\dal\GenericDAL.cs" />
     <Compile Include="api\master\dal\InventoryDocumentationDAL.cs" />
@@ -49,6 +50,7 @@
     <Compile Include="api\master\dal\ProductTypeDAL.cs" />
     <Compile Include="api\master\dal\RoleDAL.cs" />
     <Compile Include="api\master\dal\RolePermissionsDAL.cs" />
+    <Compile Include="api\master\dal\SecurityDAL.cs" />
     <Compile Include="api\master\dal\SignInDAL.cs" />
     <Compile Include="api\master\dal\UserDAL.cs" />
     <Compile Include="api\master\helper\SqlHelper.cs" />
@@ -60,13 +62,17 @@
     <Compile Include="api\master\model\ProductType.cs" />
     <Compile Include="api\master\model\Role.cs" />
     <Compile Include="api\master\model\RolePermission.cs" />
+    <Compile Include="api\master\model\Security.cs" />
     <Compile Include="api\master\model\SignIn.cs" />
     <Compile Include="api\master\model\User.cs" />
-    <Compile Include="api\transaction\Transaction.cs" />
+    <Compile Include="api\security\SecureDocument.cs" />
+    <Compile Include="api\security\SecurePermissions.cs" />
+    <Compile Include="api\security\SecureRole.cs" />
+    <Compile Include="api\security\SecureUser.cs" />
+    <Compile Include="api\bulk\excel\LoadFromExcel.cs" />
     <Compile Include="api\utils\NetworkUtils.cs" />
     <Compile Include="ComponentIntegrationFacade.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="api\transaction\ITransaction.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
