Created method fro reading the RSA key

--- a/trunk/ProductWarehouseManager/ProductWarehouseManager/ProductWarehouseManager.csproj
+++ b/trunk/ProductWarehouseManager/ProductWarehouseManager/ProductWarehouseManager.csproj
@@ -59,6 +59,7 @@
     </Compile>
     <Compile Include="Classes\Invoice.cs" />
     <Compile Include="Classes\Product.cs" />
+    <Compile Include="Classes\ReadRSA.cs" />
     <Compile Include="HomePage.cs">
       <SubType>Form</SubType>
     </Compile>
